# Novel_Generate_Agent

./: .gitignore  BUILD-REPORT.md  FRONTEND_REDESIGN.md  LICENSE  README.md  rebuild-installer.sh
core/: Cargo.toml
core/crates/na-common/: Cargo.toml
core/crates/na-common/src/: cancel.rs  error.rs  id.rs  lib.rs  time.rs
core/crates/na-host/: Cargo.toml
core/crates/na-host/src/: engine.rs  lib.rs  rpc.rs
core/crates/na-host/tests/: integration.rs
core/crates/na-library/: Cargo.toml
core/crates/na-library/src/: knowledge.rs  lib.rs  work.rs
core/crates/na-memory/: Cargo.toml
core/crates/na-memory/src/: audit.rs  bm25.rs  checkpoint.rs  lib.rs  memory.rs
core/crates/na-runtime/: Cargo.toml
core/crates/na-runtime/src/: agent_loop.rs  context.rs  injection.rs  lib.rs  loop_hooks.rs  message.rs  model.rs  orchestrator.rs  profile.rs  provider.rs  react.rs  scheduler.rs  session.rs  session_store.rs  skills.rs  subagent.rs
core/crates/na-sandbox/: Cargo.toml
core/crates/na-sandbox/src/: budget.rs  glob.rs  lib.rs  path_jail.rs  policy.rs
core/crates/na-story/: Cargo.toml  example_story_state.json
core/crates/na-story/examples/: demo.rs
core/crates/na-story/src/: guard.rs  helpers.rs  lib.rs  manager.rs  prompts.rs  state.rs
core/crates/na-tools/: Cargo.toml
core/crates/na-tools/src/: hooks.rs  http.rs  lib.rs  mcp_stdio.rs  output.rs  registry.rs  tool.rs  validate.rs
core/crates/na-tools/src/tools/: edit.rs  fs.rs  git.rs  knowledge_tools.rs  mcp.rs  memory_tools.rs  mod.rs  search.rs  shell.rs  web.rs
desktop-tauri/: index.html  package-lock.json  package.json
desktop-tauri/src/: App.tsx  DESKTOP_REDESIGN.md  main.tsx
desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: lib.rs  main.rs
desktop-tauri/src/components/: ConfirmModal.tsx  Dots.tsx  EmptyState.tsx  MemoryDrawer.tsx  ModelSelector.tsx  Navigation.tsx  Panel.tsx  Seal.tsx  SessionsDrawer.tsx  SettingsModal.tsx  Sidebar.tsx  Skeleton.tsx  Spinner.tsx  TitleBar.tsx  Toast.tsx  WorkContext.tsx  icons.tsx
desktop-tauri/src/components/agent/: AgentFeed.tsx  Conversation.tsx  ReasoningBlock.tsx  ToolCallCard.tsx  WorkStatus.tsx  WorkflowSteps.tsx
desktop-tauri/src/components/drawer/: Drawer.tsx
desktop-tauri/src/components/ide/: FileTree.tsx  IdeAiPanel.tsx  MarkdownEditor.tsx
desktop-tauri/src/components/work/: WorkTabs.tsx
desktop-tauri/src/lib/: agentRun.ts  core.ts  knowledge.ts  memory.ts  providers.ts  screens.tsx  sessions.ts  studio.ts  window.ts  works.ts
desktop-tauri/src/screens/: ChaptersScreen.tsx  ChatScreen.tsx  CheckpointsScreen.tsx  CollabScreen.tsx  DiscussWork.tsx  IdeWork.tsx  KnowledgeWork.tsx  LibraryWork.tsx  MemoryScreen.tsx  PlanningScreen.tsx  PlanningWork.tsx  ProvidersScreen.tsx  RevisionWork.tsx  SessionsScreen.tsx  SimulateWork.tsx  StudioScreen.tsx  StudioWork.tsx  ToolsScreen.tsx
desktop-tauri/src/styles/: DESKTOP_V2_MIGRATION.md  app.css  ide.css  legacy.css  library-knowledge.css  providers.css  theme.css  work-screens.css
docs/: CANON-ALIGNMENT-COMPLETION.md  CANON-ALIGNMENT-ENHANCEMENT.md  CANON-ALIGNMENT-ROADMAP.md  DELIVERY-REPORT.md  INDEX.md  PROGRESS-DAY1.md  PROGRESS-DAY2.md  QUICK-START.md  README-CONSISTENCY-ENHANCEMENT.md  STORY-STATE-GUIDE.md  STORY-STATE-SUMMARY.md  VERIFICATION-CHECKLIST.md  implementation-checklist.md  story-consistency-enhancement-part2.md  story-consistency-enhancement-part3.md  story-consistency-enhancement-part4.md  story-consistency-enhancement.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/rpc/: route.ts
frontend/components/: Button.tsx  CheckpointPanel.tsx  Connection.tsx  ConnectionBanner.tsx  EmptyState.tsx  FileWorkbench.tsx  MemoryPanel.tsx  Providers.tsx  RpcConsole.tsx  StatusBar.tsx  TitleBar.tsx  Toast.tsx  ToolCatalog.tsx  ViewTransition.tsx
frontend/lib/: coreClient.ts  desktop.ts  rpcClient.ts  types.ts
frontend/public/: .gitkeep
installer/: index.html  package-lock.json  package.json
installer/src/: App.css  App.tsx  Uninstall.tsx  main.tsx
installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: lib.rs  main.rs
installer/src/lib/: installer.ts  win.ts
mobile/: README.md  pubspec.yaml
mobile/android/: gradle.properties
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/novelgenerateteam/novel_mobile/: MainActivity.kt
mobile/android/app/src/main/res/xml/: network_security_config.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: ai_client.dart  main.dart  motion.dart  rich_text.dart  rpc.dart  settings.dart  storage.dart  widgets.dart
mobile/lib/screens/: chapters_screen.dart  checkpoint_screen.dart  files_screen.dart  memory_screen.dart  settings_screen.dart  studio_screen.dart  tools_screen.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
uninstaller/: package.json
