[workspace]
resolver = "2"
members = [
    "crates/na-common",
    "crates/na-sandbox",
    "crates/na-tools",
    "crates/na-memory",
    "crates/na-library",
    "crates/na-runtime",
    "crates/na-host", "crates/na-story",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Novel Generate Team"]
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
    "io-std",
    "fs",
] }
regex = "1"

# Internal crates
na-common = { path = "crates/na-common" }
na-sandbox = { path = "crates/na-sandbox" }
na-tools = { path = "crates/na-tools" }
na-memory = { path = "crates/na-memory" }
na-library = { path = "crates/na-library" }
na-runtime = { path = "crates/na-runtime" }

[profile.release]
opt-level = 2
lto = "thin"
