[package]
name = "desktop-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# The Rust core, embedded directly as this app's native backend (no separate
# process, no Node server). `na-host` re-exports the Engine + runtime types.
na-host = { path = "../../core/crates/na-host" }
# Direct access to the runtime's real model providers + config store.
na-runtime = { path = "../../core/crates/na-runtime" }
# Multi-work library + per-work knowledge bases.
na-library = { path = "../../core/crates/na-library" }
# Common types + tool trait for custom tool registration.
na-common = { path = "../../core/crates/na-common" }
na-tools = { path = "../../core/crates/na-tools" }
na-sandbox = { path = "../../core/crates/na-sandbox" }

