[package]
name = "na-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "host"
path = "src/bin/host.rs"

[dependencies]
na-common.workspace = true
na-sandbox.workspace = true
na-tools.workspace = true
na-memory.workspace = true
na-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
