[package]
name = "na-story"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
na-common = { path = "../na-common" }
na-memory = { path = "../na-memory" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
